--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <h1>Welcome to My Website!</h1>
+            <h1>Mason Topiah</h1>
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
@@ -21,19 +21,24 @@
             <section id="about">
                 <h2>About Me</h2>
                 <p>This is a section about me.</p>
+                <hr>
             </section>
             <section id="projects">
                 <h2>Projects</h2>
                 <p>This is a section for projects.</p>
+                <hr>
             </section>
             <section id="contact">
                 <h2>Contact</h2>
                 <p>This is a section for contacts.</p>
+                <hr>
             </section>
         </main>
-        <footer>
-            <p>&copy; 2024 My Personal Website</p>
+        <footer class="footer">
+            <p>&copy; 2024 Mason Topiah</p>
+            <hr> <!--This creates a horizontal line for the footer-->
+            <p> Website Version: 0.0.1</p>
         </footer>
-        <script src="script.js"></script>
+<!--       <script src="script.js"></script> Use this for pop-up notification--> 
     </body>
 </html>
