--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+            <button class="toggle-button" id="toggleTheme">Toggle Light/Dark Mode</button>
             </nav>
         </header>
         <main>
@@ -37,8 +38,8 @@
         <footer class="footer">
             <p>&copy; 2024 Mason Topiah</p>
             <hr> <!--This creates a horizontal line for the footer-->
-            <p> Website Version: 0.0.1</p>
+            <p> Website Version: 1.0.0</p>
         </footer>
-<!--       <script src="script.js"></script> Use this for pop-up notification--> 
+        <script src="toggle_light_dark.js"></script> <!-- Use this for light/dark toggle -->
     </body>
 </html>
