--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
                     <li><a href="#about">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
-                </ul>
-            <button class="toggle-button" id="toggleTheme">Toggle Light/Dark Mode</button>
+            </ul>
+<!--            <button class="toggle-button" id="toggleTheme">Toggle Light/Dark Mode</button> -->
             </nav>
+        <div class="theme-switch-wrapper">
+            <label class="theme-swtich" for="checkbox">
+                <input type="checkbox" id="checkbox"/>
+                <div class="slider round"></div>
+            </label>
+        </div>
         </header>
         <main>
             <section id="about">
